Bug 1694729 - Fix sizing issues for display:table-* on <fieldset> and replaced elements.  r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D106656